# parking-jawn

./: README.md  index.html  package.json  tailwind.config.js
data-etl/: .env  pyproject.toml
data-etl/parking_jawn_data/: __init__.py  __main__.py
src/: App.vue  index.css  main.js  netlify.toml
src/components/: Dropdown.vue  Footer.vue  Loader.vue  Navbar.vue  SocialIcons.vue
src/components/Dashboard/: ChartHeader.vue  DataSelection.vue  InfoTooltip.vue  WelcomeMessage.vue  index.vue  updateDashboard.js  zipCodes.js
